want to prevent cheating on big

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 					<label for="twentyxtwenty">20X20</label>
 				</div>
 				<div>
-					<input type="radio" id="thirtyxthirty"
-					 name="size" value="thirty">
-					<label for="thirtyxthirty">30X30</label>
+					<input type="radio" id="fourtyxfourty"
+					 name="size" value="fourty">
+					<label for="fourtyxfourty">40X40</label>
 				</div>
 			
 			</div>
@@ -46,7 +46,7 @@
 			<div>
 				<h2>Cheats:</h2>
 				<h2>P: show path</h2>
-				<h2>H: show hight</h2>
+				<h2>H: show hint</h2>
 				<h2>B: show past</h2>
 			</div>
 		</div>
